# trademinder

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_categories_and_extensions.py  003_etrade_symbol.py  004_strategy_categories.py  005_commentary_rationale_link.py
backend/app/: config.py  database.py  main.py  scheduler.py
backend/app/models/: __init__.py  alert.py  briefing.py  category.py  commentary.py  rationale.py  signal.py  trade.py
backend/app/routers/: alerts.py  briefing.py  categories.py  commentary.py  market.py  positions.py  signals.py  trades.py
backend/app/schemas/: __init__.py  alert.py  category.py  commentary.py  positions.py  trade.py
backend/app/services/: alert_engine.py  options_scanner.py  price_fetcher.py  signal_engine.py  technicals_fetcher.py
backend/docker/: init-test-db.sql
backend/tests/: conftest.py  test_alert_engine.py  test_alerts.py  test_commentary.py  test_commentary_rationale.py  test_health.py  test_market_router_p2.py  test_market_technicals.py  test_models_import.py  test_options_scanner.py  test_price_fetcher.py  test_technicals_fetcher.py  test_trade_rationale.py  test_trades.py
context/: README.md  _active.md  _project.md  extension.md  feature-edit-trade.md  feature-technicals-capture.md  feature-tradegrouping.md  margin.md
docs/: DOMSample.html
extension/: background.js  content.css  content.js  (+1 more)
(+68 files in other folders)
